Updated front-end design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,10 @@
 
   <div class="input-area">
     <input type="text" name="query" placeholder="How can we help you?" />
-    <button class="send-btn">&#9658;</button>
+    <button class="send-btn">►</button>
   </div>
 
   <div class="policy-text">
-    &#9432; Answers are AI generated, <a href="#">click here</a> for the Policy.
+    ⓘ Answers are AI generated, <a href="#">click here</a> for the Policy.
   </div>
 </div>
